# CUDA_algorithm_and_measure

./: .gitignore  CMakeLists.txt  README.md  curandom_kernel_example.cu  histogram.cu  monte_carlo.cu  nvccuse  output.cpp  output.cu  reduce.cu  reduce_cg.cu  reduce_other.cu  scan.cu  test_curand_and_kernel_curand_time.cu  test_vector_add_with_cublas.cpp
cublas/: CMakeLists.txt  cublas.cu
histogrim/: CMakeLists.txt  README.md  histogrim.cu
reduce/: CMakeLists.txt  reduce.cu
scan/: scan.cu
